[gd_scene load_steps=18 format=2]

[ext_resource path="res://Juego/Personaje/Personaje.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Players/bunny1_jump.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Players/bunny1_ready.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Players/bunny1_stand.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Players/bunny1_walk2.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Players/bunny1_walk1.png" type="Texture" id=6]
[ext_resource path="res://Recursos/SFX/Salto2.wav" type="AudioStream" id=7]
[ext_resource path="res://Recursos/Items/wing_left.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Items/wing_right.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Salto",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Correr",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 36.875
height = 69.4924

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.0306, 7 )

[sub_resource type="Animation" id=4]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Oscurecer"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 2.46229, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "OscurecerVerdad"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1.18921, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 3, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -20.0, -30.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 3, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 20.0, 30.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.93187, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3.605, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Personaje" type="KinematicBody2D" groups=[
"Jugador",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 50
collision_layer = 2
collision_mask = 29
script = ExtResource( 1 )
velocidad = Vector2( 600, 800 )
aceleracion_caida = 230

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -14.7591, -97.4466 )
rotation = 0.174533
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 10 )
offset = Vector2( -34.8637, -14.1348 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 15.479, -96.1866 )
rotation = -0.174533
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 11 )
offset = Vector2( 35.8916, -13.4627 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -96.6446 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -72.2538 )
shape = SubResource( 2 )

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -16.606
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -294.572 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_bottom = 2000
drag_margin_v_enabled = true
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.5 )
shape = SubResource( 3 )

[node name="EnfriaminetoSalto" type="Timer" parent="."]
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 4 )
anims/Oscurecer = SubResource( 5 )
anims/OscurecerVerdad = SubResource( 6 )
anims/Vuelo = SubResource( 7 )
anims/entrarPortal = SubResource( 8 )

[node name="EnfriamientoVolar" type="Timer" parent="."]
wait_time = 1.5

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="EnfriaminetoSalto" to="." method="_on_Enfriamineto_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoVolar" to="." method="_on_EnfriamientoVolar_timeout"]
